2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c:
	(hildon_picker_button_set_done_button_text): Set the dialog's
	done button text here as well.

	Fixes NB#90232 (Picker button does not set the label on done button
	for the second time)

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_clicked): Update
	warning message.

2008-10-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_insert)
	(hildon_app_menu_add_filter, can_activate_accel): Allow items in
	the HildonAppMenu to be activatable using keyboard accelerators
	when the menu is not being shown.

	Fixes: NB#89935 (Shortcuts for menu buttons are not working)

2008-10-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c
	(hildon_stackable_window_show):
	Don't hide old windows automatically when new windows are shown:
	this is now a task for the window manager.
	(hildon_stackable_window_class_init)
	(hildon_stackable_window_hide):
	Remove windows from the stack everytime they're hidden.
	(hildon_stackable_window_realize):
	Don't change the _NET_WM_WINDOW_TYPE property. Use
	_HILDON_STACKABLE_WINDOW instead for the window manager to manage
	it as a stackable window.

	* src/hildon-program.c
	(hildon_program_pop_window_stack):
	Just hide the window to remove it from the stack.
	(hildon_program_go_to_root_window):
	Don't call gtk_widget_show(), this is now a task for the window
	manager.

	Fixes: NB#89411 (Window Manager locks caused by HildonStackableWindow)

2008-10-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c
	(hildon_button_construct_child):
	Don't pack anything in the button until text or image are
	set. This allows adding a custom child after creating the button
	with hildon_button_new().
	(hildon_button_finalize, hildon_button_class_init)
	(hildon_button_init, hildon_button_set_arrangement): Destroy the