@@ -1,3 +1,11 @@
+2008-10-20  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/hildon-gtk.h
+	* src/hildon-gtk.c (hildon_gtk_menu_new): New function to create a
+	GtkMenu with Hildon style.
+
+	Patch contributed by Daniel Borgmann (danielb@openismus.com)
+
 2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* src/hildon-picker-button.c:
